[package]
name = "leetcode-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = "4.0.29"
env_logger = "0.10.0"
graphql_client = "0.11.0"
log = "0.4.17"
reqwest = "0.11.13"
serde = "1.0.149"
tokio = "1.23.0"
